--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     height: 80vh;
     margin: 0;
     width: 99%;
+    /* overflow: hidden; */
 
     /* border: px solid black; */
     align-items: center;
@@ -20,13 +21,14 @@ body{
     /* border: 1px solid red; */
     
     display: flex;
+    overflow: hidden;
     justify-content: space-between;
 
 }
 
 .navbar .search{
     margin-left: 2vw;
-    width: 10vw;
+    width: 10%;
     display: flex;
     align-items:center ;
     font-size: 25px;
@@ -38,7 +40,7 @@ body{
     width: 5vw;
 }
 .navbar .logo{
-    width: 5vw;
+    width: 10%;
 }
 .navbar .logo img{
     width: 20vw;
@@ -46,7 +48,7 @@ body{
 
 }
 .navbar .nav{
-    width: 40vw;
+    width: 40%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -174,6 +176,7 @@ body{
     width: 100%;
     /* height: 130%; */
     
+    
 }
 .Best_in_Travel{
     position: absolute;
@@ -290,6 +293,7 @@ body{
     height: 10vh;
     margin-left: 2vh;
     border-radius: 0.5vh;
+    
 }
 .Section4_options .option1 .text{
     height:8vh ;
