--- a/style.css
+++ b/style.css
@@ -182,6 +182,8 @@ body{
     position: absolute;
     font-size: 50px;
     z-index: 1;
+    color:white;
+    font-weight: 600; 
 }
 .section3 button{
     z-index: 1;
