--- a/style.css
+++ b/style.css
@@ -68,9 +68,11 @@ body{
     background-color: white;
     border-radius: 25px;
     color: black;
-
+    height: 5vh;
     padding-left: 1vw;
     padding-right: 1vw;
+    padding-top: 0;
+    padding-bottom: 0;
 
 }
 
@@ -693,6 +695,10 @@ footer .footer_3{
     .section5{
         height: 90vh;
         overflow-y: hidden;
+    }
+    .section5 .box .sentence2{
+        font-size: 30px;
+        
     }
     footer{
         display: flex;
