--- a/style.css
+++ b/style.css
@@ -752,6 +752,10 @@ footer .footer_3{
         font-size: 30px;
         
     }
+    .section5 .box button{
+        font-size: 17px;
+        
+    }
     footer{
         display: flex;
         flex-direction: column;
